src/test/contracts/negative/deep_pattern_matching/pm_fail11.religo
let t12 = (x : list(int)) =>
  switch(x) {
  | [hd, ...[hd2, ...tl]] => hd + hd2
  | [] => 0
  }